# worldbox

./: .gitignore  Cargo.toml
assets/: chunk.wgsl  config.yaml
src/: blocks.rs  camera.rs  chunk.rs  chunks.rs  debug.rs  fps.rs  main.rs  mesher.rs  rendering.rs  systems.rs  utils.rs  world.rs
src/chunk/: blocks.rs  mod.rs
src/world/: menu.rs  mod.rs
